# Proyecto_final_MoMa

./: README.md  moma.py  pyproject.toml  readme.md
conf/: settings.toml
config/: settings.toml
sql/: create_raw_tables.sql  create_schemas.sql  load_moma.sql  to_cleaned.sql  to_semantic.sql
