[tool.poetry]
name = "proyecto_final_moma"
version = "0.1.0"
description = ""
authors = ["Bren <bcjg23@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = {version = "^1.17", extras = ["all"]}
toml = "^0.10.0"
click = "^7.0"
dynaconf = "^2.2"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-docstrings = "^1.5"
xdoctest = "^0.10.3"
pydocstyle = "^4.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = {version = "^4.3", extras = ["pyproject"]}
mypy = "^0.750.0"
pytest-cov = "^2.8"
pytest-mock = "^1.12"
coverage = "^4.5"
tox = "^3.14"
towncrier = "^19.2"
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
